test/libyul/yulSyntaxTests/verbatim_leading_zero.yul
{
    let verbatim_01i_02o := 2
}
// ----
// DeclarationError 5017: (10-26): The identifier "verbatim_01i_02o" is reserved and can not be used.
